# FaultLens

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo_outputs/: analysis_manifest.json  analysis_report.md  case_analysis.jsonl  demo_inference.jsonl  demo_results.jsonl  hierarchical_root_cause_report.md  input_manifest.json  run.db  run_metadata.json  summary.json
demo_outputs/cases/: 103.md  104.md
demo_outputs/exemplars/: implementation_bug-102.md  incomplete_or_truncated_solution-101.md
demo_outputs/llm_raw_responses/: 101.txt  104.txt
docs/superpowers/plans/: 2026-03-24-faultlens-agent-implementation.md  2026-04-03-scalable-ingestion-implementation.md  2026-04-04-bootstrap-hardening-implementation.md
docs/superpowers/specs/: 2026-03-24-faultlens-agent-design.md  (+2 more)
scripts/: bootstrap.sh  run.sh
src/faultlens/: cli.py  config.py  env.py  models.py  orchestrator.py
tests/: conftest.py  test_adaptive_llm_parser.py  test_attribution.py  test_bootstrap.py  test_cli.py  test_code_extractor.py  test_config.py  test_deterministic_pipeline.py  test_diffing.py  test_end_to_end.py  test_failure_gate.py  test_harness.py  test_hierarchy.py  test_ingest.py  test_joiner.py  test_language.py  test_llm_client.py  test_python_runner.py  test_reporting.py  test_reporting_labels.py  test_run_store.py  test_runner_base.py  test_scaling.py  test_toolchain_runners.py
tests/fixtures/: ambiguous_input_a.jsonl  ambiguous_input_b.jsonl  broken_inference_sample.jsonl  broken_results_sample.jsonl  inference_sample.jsonl  results_sample.jsonl
(+28 files in other folders)
